--- a/jfrog-artifactory/Jenkinsfile
+++ b/jfrog-artifactory/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-    def server = Artifactory.server('cursojenkinsmac.jfrog.io')
+    def server = Artifactory.server('sebascamilo12.jfrog.io')
     def rtGradle = Artifactory.newGradleBuild()
     def buildInfo = Artifactory.newBuildInfo()
     
